tests/negative/for_basic.em
int main() {
    for (int i = 0; i < 5) {
        int x = i;
    }
    return 0;
}